--- a/CentralEcoCity/Properties/Resources.resx
+++ b/CentralEcoCity/Properties/Resources.resx
@@ -143,6 +143,6 @@
     <value>..\skin\VideoCap_0.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="双视大屏" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\双视大屏.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Resources\双视大屏.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
